<resources>
    <string name="app_name">GestureDetector</string>
    <string name="gesture_detector">Gesture Detector</string>
    <string name="circlesGestures">Gesty z użyciem macierzy</string>
    <string name="drawingGestures">Gesty rysowane</string>
    <string name="options">Opcje</string>
    <string name="logo">Logo</string>
    <string name="computer_connection">Sposób połączenia z komputerem</string>
    <string name="choose">Wybierz</string>
    <string-array name="connection_type">
        <item>Wi-Fi</item>
        <item>BlueTooth</item>
    </string-array>
    <string name="save">Zapisz</string>
    <string name="ip_address">Adres ip</string>
    <string name="bluetooth_address">Adres Mac</string>
    <string name="port_address">Port</string>
    <string name="cancel">Anuluj</string>
    <string name="newGesture">Dodaj gest</string>
    <string name="makeGesture">Wykonaj gest</string>
    <string name="showGestures">Przeglądaj gesty</string>
    <string name="back">Wróć</string>
    <string name="newDrawingText">Narysuj gest</string>
    <string name="newDrawingDescription">Czynność</string>
    <string name="newDrawingName">Nazwa gestu</string>
    <string name="test">Test</string>
    <string name="drawingSettings">Ustawienia</string>
    <string name="settings">Ustawienia</string>
    <string name="numberOfRepeats">Ilość powtórzeń:</string>
    <string name="optionsDesc">Wpisz liczbę próbek do zapamiętania pojedynczego gestu (do uczenia maszynowego)</string>
</resources>
