<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    android:orientation="vertical">

    <TextView
        android:id="@+id/drawingGesturesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/drawingGestures"
        android:textSize="30sp" />

    <Button
        android:id="@+id/newDrawingGestureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp"
        android:text="@string/newGesture" />

    <Button
        android:id="@+id/showDrawingGesturesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newDrawingGestureButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/showGestures" />

    <Button
        android:id="@+id/makeDrawingGestureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showDrawingGesturesButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/makeGesture" />

    <Button
        android:id="@+id/backDrawing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/makeDrawingGestureButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/back" />
</RelativeLayout>