<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/lightBlue"
    android:weightSum="1">
    <TextView
        android:id="@+id/options_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:layout_marginTop="39dp"
        android:textStyle="bold"
        android:textSize="51sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/computer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer_connection"
        android:layout_marginTop="64dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_below="@+id/options_header"
        android:layout_centerHorizontal="true" />
    <Spinner
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/computer_connection"
        android:entries="@array/connection_type"
        android:prompt="@string/choose"
        android:layout_below="@+id/computer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

    <TextView
        android:id="@+id/optionsMenuText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/computer_connection"
        android:layout_marginTop="53dp"
        android:layout_toLeftOf="@+id/computer_connection"
        android:layout_toStartOf="@+id/computer_connection"
        android:text="TextView" />

    <EditText
        android:id="@+id/optionsMenuInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/options_header"
        android:layout_alignStart="@+id/options_header"
        android:layout_below="@+id/computer_connection"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/saveOptionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/optionsMenuInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/save" />

</RelativeLayout>
