<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/lightBlue"
                android:orientation="vertical"
                android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/circlesGestureView"
        android:layout_alignLeft="@+id/circlesGestureView"
        android:layout_alignStart="@+id/circlesGestureView"
        android:layout_marginBottom="44dp"
        android:text="@string/newDrawingName"/>

    <pl.edu.uj.laciak.gesturedetector.view.CircleDrawingView
        android:id="@+id/circlesGestureView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:horizontalSpacing="20dp"
        android:verticalSpacing="30dp"/>

    <EditText
        android:id="@+id/newCircleNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:ems="10"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/newCirleOperationText"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/circlesGestureView"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:text="@string/newDrawingDescription"/>

    <Spinner
        android:id="@+id/newCircleOperationSpinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newCircleNameInput"
        android:layout_alignStart="@+id/newCircleNameInput"
        android:layout_alignTop="@+id/newCirleOperationText"/>

    <Button
        android:id="@+id/newCircleGestureSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/circlesGestureView"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/circlesGestureView"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:text="@string/save"/>

    <Button
        android:id="@+id/newCircleGestureBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/newCircleOperationSpinner"
        android:layout_alignRight="@+id/newCircleOperationSpinner"
        android:layout_alignTop="@+id/newCircleGestureSaveButton"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/back"/>
</RelativeLayout>
